fix spacing of dual palette legend #1582

--- a/web/css/layers.css
+++ b/web/css/layers.css
@@ -559,7 +559,7 @@
   margin-bottom: 0.5em;
 }
 .tab-content .wv-palette-selector-row label {
-  margin-left: 8px;
+  margin-left: 3px;
 }
 .wv-layers-options-dialog .wv-label {
   color: #fff;
